Fix some layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 h2 {
-  font-variant: small-caps;
+ font-variant: small-caps;
+  margin-top: 0px;
+  padding-top:0px;
 }
 
 p.bibitem {
@@ -19,8 +21,19 @@ p.bibitem {
 }
 
 .navbar {
-    background-image: none;
-    background-color:rgba(0, 0, 0, 0);
     border: 0;
     margin-bottom: 0;
+}
+
+/* Customize container */
+@media (min-width: 768px) {
+  .container {
+    max-width: 700px;
+  }
+}
+
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {
+    padding-top: 70px;
+  padding-bottom: 20px;
 }
